updated directory and created reading goals
