# controller/directory.js
@@ -1,7 +1,8 @@
-const { user } = require('../models');
 const db = require('../models');
 const Directory = db.directory;
 const Book = db.book;
+const mongoose = require('mongoose');
+const toId = mongoose.Types.ObjectId;
 /** 
 {
     book:{
@@ -18,10 +19,10 @@ const Book = db.book;
 */
 const createDirectory = async (req, res) => {
     const userEmail = req.user.email;
-    const bookId = req.params._id;
-    Directory.findOne({user: userEmail}).then((data)=>{
+    const bookId= toId(req.params._id);
+    await Directory.findOne({user: userEmail}).then((data)=>{
         if(!data){
-            console.log('hehe')
+            // console.log('hehe')
             //create new directory if a directory hasn't been created yet
             const directory = new Directory;
             Book.findById({ _id: bookId }).then((book) => {
@@ -31,11 +32,9 @@ const createDirectory = async (req, res) => {
                 const directoryData = {
                     user: userEmail,
                     note: req.body.note,
-                    books: [{
-                        id: book._id,
-                        name: book.name
-                    }]
+                    books: [bookId]
                 }
+                
                 const result = new Directory(directoryData);
                 try{
                     const saveResult =result.save();
@@ -45,21 +44,19 @@ const createDirectory = async (req, res) => {
                 }
             })}
         else{
-            console.log('haha');
+            // console.log('haha');
             Book.findById({ _id: bookId }).then((book) => {
                 if(!book){
                     res.status(404).send({message: `Cannot find book with id ${id}`})
                 }
                 console.log(data.books)
 
-                const bookIndex = data.books.findIndex(b => new String(b.id).trim() === new String(bookId).trim());
-                (objInItems => new String(objInItems.productId).trim() === new String(product._id).trim());
+                const isExisting = data.books.includes(bookId);
 
                 // if bookId is not found 
-                if(bookIndex == -1){
-                    console.log('hi');
-                    console.log(bookIndex)
-                    data.books.push({id: book._id, name: book.name})
+                if(!isExisting){
+                    // console.log('hi');
+                    data.books.push(bookId)
                     try{
                         data.save();
                         res.status(201).json({'message': `New book was added in the directory!`})
@@ -68,34 +65,73 @@ const createDirectory = async (req, res) => {
                     }
                 }
                 //if bookId is part of the array
-                else if(bookIndex == 0 || 1){
-                    console.log('hihi')
-                    console.log(bookIndex);
+                else if(isExisting){
+                    // console.log('hihi')
                     res.send({message:'Book already exists in directory'})
                 }
             }
            )
         }})}
 
-//get directory from current user only        
-const getDirectory = async (req,res) =>{
-    Directory.find({user: req.user.email}).then((data)=>{
+
+//get all directories from all users       
+const getDirectories = async (req,res) =>{
+    await Directory.find({}).populate({path:"books", model: "book"}).populate
+    ({path:"books", populate:{path:"goal", model: "readingGoal",match:{user:req.user.email}}})
+    .then((data)=>{
         res.send(data);
     }).catch((err)=>{
         res.status(500).send({
          message: err.message || 'An error occurred while retrieving the directory.'
     })}
 )};
+//select: "description, startDate", new: true
+//get user directory from current user only        
+const getDirectory = async (req,res) =>{
+    await Directory.find({user: req.user.email}).populate({path:"books", model: "book"}).populate
+    ({path:"books", populate:{path:"goal", model: "readingGoal", match:{user:req.user.email}}})
+    .then((data)=>{
+        // const dead = data.filter(deadGoal => JSON.stringify(deadGoal).books != null)
+        // console.log(dead);
+        res.send(data);
+    }).catch((err)=>{
+        return res.status(500).send({
+         message: err.message || 'An error occurred while retrieving the directory.'
+    })}
+)};
 
 //delete user directory
-const deleteDirectory = (req, res) => {
-    const id = req.params._id;
-    const result = Directory.findOneAndDelete({user: req.user.email})
+const deleteDirectory = async (req, res) => {
+    const result = await Directory.findOneAndDelete({user: req.user.email})
     .then(data => {
             res.send({'message': `Directory was successfully deleted!`})
         }).catch(err =>{
           res.status(500).send({message: err.message || 'An error occurred while deleting the directory.'})
 })}
+
+//delete book from directory
+//in progress
+
+// const deleteBook = async (req, res) => {
+//     const userEmail = req.user.email;
+//     const bookId= toId(req.params._id);
+//     await Directory.findOne({user: userEmail}, {books: [bookId]).then((data)=>{
+//         if(!data){
+//             res.status(500).send({'message': `Directory not found/book not found in directory`})
+//         }try{
+//             Directory.updateOne({user: req.user.email}, 
+//                 {
+//                     $pull: {
+//                       books: bookId,
+//                     },
+//                   });
+//                   res.send({'message': `Book was successfully deleted!`})
+//         }catch(err){
+//             res.status(500).json({'message': err.message})
+//         }})
+//     }
+
+     
 
 
 module.exports = {createDirectory, getDirectory, deleteDirectory};
