# models/readingGoals.js
@@ -1,41 +1,31 @@
+const findOrCreate = require("mongoose-findorcreate");
 const mongoose = require('mongoose');
-const directory = require('./directory');
+
 
 let ReadingGoalsSchema = new mongoose.Schema(
     {
-       user:{
-        type: String,
-        ref: 'user'
-       },
-       description:{
-        type: String,
-       },
-       startDate:{
-        type: String
-       },
-       endDate:{
-        type:String
-       },
-       completed:{
-        type:Boolean,
-        default:false
-       },
-       book:{
-        id: mongoose.Schema.Types.ObjectId,
-        ref:'book'
-       }
+        user:{
+            type: String
+        },
+        description:{
+            type: String,
+        },
+        startDate:{
+            type: String
+        },
+        endDate:{
+            type:String
+        },
+        completed:{
+            type:Boolean,
+            default:false
+        },
+        book:{
+            type: mongoose.Schema.Types.ObjectId,
+            ref:'book'
+        }
     }, {timestamps: true}
 );
 
-// let ReadingGoalsSchema = new mongoose.Schema(
-//     {
-//         id: String,
-//         directory: directory,
-//         description: String,
-//         startDate: Date, 
-//         endDate: Date, 
-//         completed: Boolean
-//     },
-//     { timestamps: true }
-// );
+ReadingGoalsSchema.plugin(findOrCreate);
 module.exports = mongoose.model('readingGoal', ReadingGoalsSchema);
