# routes/directory.js
@@ -7,14 +7,21 @@ const isLoggedIn = require("./authentication").isLoggedIn;
 router.use(passport.initialize());
 router.use(passport.session());
 
-//will probably update routes later on
+
 //Create a new directory
 router.post('/:_id', isLoggedIn, directoryController.createDirectory)
 
 //Get directory by user only
-router.get('/', isLoggedIn, directoryController.getDirectory)
+router.get('/userDirectory', isLoggedIn, directoryController.getDirectory)
+
+//Get all directories
+router.get('/userDirectory', isLoggedIn, directoryController.getDirectory)
 
 //Delete user directory
 router.delete('/', isLoggedIn, directoryController.deleteDirectory)
+
+//Delete book
+//in progress
+// router.delete('/:_id', isLoggedIn, directoryController.deleteBook)
 
 module.exports = router;
