# routes/index.js
@@ -15,6 +15,7 @@ var options = {
 router.use('/user', require('./user'));
 router.use('/book', require('./book'));
 router.use('/directory', require('./directory'));
+router.use('/readingGoals', require('./readingGoals'));
 router.use('/auth', require('./authentication').routes);
 
 router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument, options));
